# xserver-xorg-input-keyboard

./: .gitignore  COPYING  ChangeLog  Makefile.in  configure  configure.ac
debian/: NEWS  changelog  control  copyright  rules
debian/patches/: 01_64bit_pointer.diff  series
man/: Makefile.am  Makefile.in  kbd.man  keyboard.man
src/: Makefile.am  Makefile.in  bsd_KbdMap.c  bsd_kbd.c  hurd_kbd.c  kbd.c  lnx_KbdMap.c  lnx_kbd.c  sco_KbdMap.c  sco_kbd.c  sun_kbd.c  sun_kbd.h  sun_kbdEv.c  sun_kbdMap.c  xf86Keymap.h  xf86OSKbd.h
